# RepMat

./: .gitignore  CONTRIBUTORS.md  LICENSE  MANIFEST.in  README.md  __init__.py  characters.py  group_types.py  groups.py  pyproject.toml  representations.py  requirements.txt  setup.py  tox.ini  utils.py
src/: __init__.py  characters.py  groups.py  representations.py  vspaces.py
src/RepMat/: __init__.py  characters.py  groups.py  representations.py  utils.py  vspaces.py
tests/: test.py  test_characters.py  test_groups.py  test_representations.py  test_vspaces.py
