[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "RepMat"
version = "0.1.0"
description = "Representation theory of finite groups in Python."
authors = [{name = "George Elliott", email = "georgeelliott.ge@proton.me"}]
license = {text = "MIT"}
dependencies = [
    "numpy",
    "sympy"
]

[tool.setuptools.packages.find]
where = ["src"]
