[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "RepMat"
version = "0.1.0"
description = "Your project description here"
readme = "README.md"
license = { text = "MIT" }  # Not as a table!
authors = [
    { name = "George Elliott", email = "georgeelliott.ge@proton.me" }
]
dependencies = [
    "numpy",
    "sympy"
]
requires-python = ">=3.6"

[tool.pytest.ini_options]
pythonpath = ["src"]

[project.urls]
Homepage = "https://github.com/george-elliott-git/RepMat"
Documentation = "https://yourdocs.com"
